--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="generic_warning">警告</string>
     <string name="generic_back">返回</string>
     <string name="generic_refresh">刷新</string>
+    <string name="generic_reset">重置</string>
     <string name="generic_delete">删除</string>
     <string name="generic_rename">重命名</string>
     <string name="generic_copy">复制</string>
@@ -48,6 +49,8 @@
     <string name="crash_exit_note">具体原因请查看日志文件。如果你无法自己解决这个问题，请将日志文件发送给具有相关技术能力的人，他们可以帮助你排查并修复问题。请不要截图当前画面，截图可能无法提供足够的信息来解决问题。</string>
     <string name="crash_restart">重启应用</string>
     <string name="crash_exit">退出应用</string>
+    <!--  错误  -->
+    <string name="error_import_image">导入图片时出现问题</string>
     <!--  启动页面  -->
     <string name="splash_screen_unpack_desc">启动器需要安装这些内容，才能够确保 Minecraft 能够正常启动。这些内容已经包含在应用中，需要解压之后才能正常使用，点击下方按钮，开始解压并更新这些内容。</string>
     <string name="splash_screen_installing">启动器正在解压这些内容，解压完成后将自动进入主界面，请耐心等待。</string>
@@ -221,6 +224,8 @@
     <string name="settings_control_mouse_control_mode_summary">选择虚拟鼠标的操作方式：滑动屏幕移动光标，或点击屏幕指定位置</string>
     <string name="settings_control_mouse_control_mode_slide">滑动控制</string>
     <string name="settings_control_mouse_control_mode_click">点击控制</string>
+    <string name="settings_control_mouse_pointer_title">虚拟鼠标指针</string>
+    <string name="settings_control_mouse_pointer_summary">测试虚拟鼠标指针或自定义其图片以匹配个人需求</string>
     <string name="settings_launcher_color_theme_title">颜色主题</string>
     <string name="settings_launcher_color_theme_summary">更改启动器的整体颜色主题</string>
     <string name="settings_launcher_full_screen_title">页面全屏化</string>
