fix(Settings Screen): remove MousePointerScreen.kt

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -225,7 +225,8 @@
     <string name="settings_control_mouse_control_mode_slide">滑动控制</string>
     <string name="settings_control_mouse_control_mode_click">点击控制</string>
     <string name="settings_control_mouse_pointer_title">虚拟鼠标指针</string>
-    <string name="settings_control_mouse_pointer_summary">测试虚拟鼠标指针或自定义其图片以匹配个人需求</string>
+    <string name="settings_control_mouse_pointer_summary">自定义虚拟鼠标指针的图片以匹配个人需求</string>
+    <string name="settings_control_mouse_pointer_reset_message">你确定要重置虚拟鼠标指针的图片吗？</string>
     <string name="settings_launcher_color_theme_title">颜色主题</string>
     <string name="settings_launcher_color_theme_summary">更改启动器的整体颜色主题</string>
     <string name="settings_launcher_full_screen_title">页面全屏化</string>
