--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -210,6 +210,8 @@
     <string name="settings_renderer_force_big_core_summary">将 Minecraft 的渲染线程绑定到 CPU 的高性能核心（大核）上，启用后可能增加功耗与发热</string>
     <string name="settings_game_version_isolation_title">全局版本隔离</string>
     <string name="settings_game_version_isolation_summary">默认隔离所有的版本，版本之间的数据互不干扰</string>
+    <string name="settings_game_skip_game_integrity_check_title">不检查游戏完整性</string>
+    <string name="settings_game_skip_game_integrity_check_summary">启动游戏时，若已存在的游戏文件与实际不匹配，是否进行重新下载</string>
     <string name="settings_game_version_custom_info_title">自定义版本信息</string>
     <string name="settings_game_version_custom_info_summary">自定义信息会显示在游戏主菜单左下角和 F3 调试界面左上角。部分特殊版本或使用外置账号登录时可能不生效。你也可以添加 [zl_version] 字段，启动器会自动替换为当前版本号</string>
     <string name="settings_game_java_runtime_title">游戏 Java 环境</string>
