Check the version and account before launching the game.

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="main_launch_game">启动游戏</string>
     <string name="main_task_menu">任务菜单</string>
     <!--  启动游戏  -->
+    <string name="game_launch_no_version">未选择游戏版本！</string>
+    <string name="game_launch_no_account">未登陆游戏账号！</string>
     <string name="game_auto_pick_runtime_failed">未找到合适的运行环境，已设置为当前版本选择的运行环境</string>
     <string name="game_button_input">输入法</string>
     <string name="game_button_force_close">强制关闭</string>
