--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
     <string name="account_add_new_server">添加认证服务器</string>
     <string name="account_add_new_account">添加账号</string>
     <string name="account_label_username">填写用户名</string>
-    <string name="account_label_server_url">填写认证服务器地址</string>
+    <string name="account_label_server_url">填写 Yggdrasil API 服务器地址</string>
     <string name="account_label_email">填写邮箱或用户名</string>
     <string name="account_label_password">填写密码</string>
     <string name="account_change_skin">更换皮肤</string>
