feat: Separate configuration screen for version

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="generic_input_too_large">输入的数值不能大于 %s</string>
     <string name="generic_unpacking">正在解压 %s</string>
     <string name="generic_unknown">未知</string>
+    <string name="generic_follow_global">跟随全局</string>
     <!--  主题  -->
     <string name="theme_color_dynamic">动态 (Android 12+)</string>
     <string name="theme_color_embermire">釉烬</string>
@@ -172,7 +173,6 @@
     <string name="versions_manage_game_path_exists_title">游戏目录已存在</string>
     <string name="versions_manage_game_path_exists_message">当前选择的游戏目录与现有的目录冲突，你不能同时管理两个游戏目录！</string>
     <string name="versions_manage_game_path_error_title">操作游戏目录时遇到问题</string>
-    <string name="versions_manage_isolation_type_follow_global">跟随全局</string>
     <string name="versions_manage_no_versions">没有安装版本</string>
     <string name="versions_manage_install_exists">此名称的版本已经存在！</string>
     <string name="versions_manage_install_cannot_use_mc_name">已选择附加内容，需要确保原版核心的独立性，请勿使用原版名称！</string>
@@ -188,21 +188,30 @@
     <string name="versions_manage_task_error">操作版本时出现问题</string>
     <string name="versions_manage_install_new">安装新游戏</string>
     <string name="versions_manage_settings">版本设置</string>
-    <string name="versions_manage_settings_overview">版本概览</string>
-    <string name="versions_manage_settings_overview_management">版本管理</string>
-    <string name="versions_manage_settings_overview_quick_actions">快捷操作</string>
-    <string name="versions_manage_settings_custom_version_icon">自定义图标</string>
-    <string name="versions_manage_settings_reset_version_icon">重置图标</string>
-    <string name="versions_manage_settings_reset_version_icon_message">你确定要重置当前版本的图标吗？</string>
-    <string name="versions_manage_settings_edit_version_summary">编辑描述</string>
-    <string name="versions_manage_settings_edit_version_summary_label">留空则使用启动器默认描述</string>
-    <string name="versions_manage_version_folder">版本文件夹</string>
-    <string name="versions_manage_saves_folder">存档文件夹</string>
-    <string name="versions_manage_resource_pack_folder">资源包文件夹</string>
-    <string name="versions_manage_shaders_pack_folder">光影包文件夹</string>
-    <string name="versions_manage_screenshot_folder">屏幕截图文件夹</string>
-    <string name="versions_manage_logs_folder">日志文件夹</string>
-    <string name="versions_manage_crash_report_folder">崩溃报告文件夹</string>
+    <string name="versions_settings_overview">版本概览</string>
+    <string name="versions_settings_overview_management">版本管理</string>
+    <string name="versions_settings_overview_quick_actions">快捷操作</string>
+    <string name="versions_settings_config">版本配置</string>
+    <string name="versions_overview_custom_version_icon">自定义图标</string>
+    <string name="versions_overview_reset_version_icon">重置图标</string>
+    <string name="versions_overview_reset_version_icon_message">你确定要重置当前版本的图标吗？</string>
+    <string name="versions_overview_edit_version_summary">编辑描述</string>
+    <string name="versions_overview_edit_version_summary_label">留空则使用启动器默认描述</string>
+    <string name="versions_overview_version_folder">版本文件夹</string>
+    <string name="versions_overview_saves_folder">存档文件夹</string>
+    <string name="versions_overview_resource_pack_folder">资源包文件夹</string>
+    <string name="versions_overview_shaders_pack_folder">光影包文件夹</string>
+    <string name="versions_overview_screenshot_folder">屏幕截图文件夹</string>
+    <string name="versions_overview_logs_folder">日志文件夹</string>
+    <string name="versions_overview_crash_report_folder">崩溃报告文件夹</string>
+    <string name="versions_config_version_settings">版本独立设置</string>
+    <string name="versions_config_game_settings">游戏独立设置</string>
+    <string name="versions_config_isolation">版本隔离</string>
+    <string name="versions_config_renderer">渲染器</string>
+    <string name="versions_config_vulkan_driver">Vulkan 驱动器</string>
+    <string name="versions_config_java_runtime_summary">指定当前版本所使用的 Java 环境</string>
+    <string name="versions_config_follow_global_if_blank">留白则跟随全局设置</string>
+    <string name="versions_config_failed_to_save">保存版本配置时出现异常</string>
     <!--  游戏  -->
     <string name="minecraft_getting_version_list">获取完整游戏列表</string>
     <string name="minecraft_download_download_version_json">下载并读取版本元数据</string>
