--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -277,8 +277,10 @@
     <string name="settings_control_mouse_pointer_title">虚拟鼠标指针</string>
     <string name="settings_control_mouse_pointer_summary">自定义虚拟鼠标指针的图片以匹配个人需求</string>
     <string name="settings_control_mouse_pointer_reset_message">你确定要重置虚拟鼠标指针的图片吗？</string>
-    <string name="settings_control_mouse_long_press_delay_title">鼠标长按触发的延迟</string>
-    <string name="settings_control_mouse_long_press_delay_summary">在屏幕上按住多长时间后识别为长按</string>
+    <string name="settings_control_mouse_long_press_delay_title">虚拟鼠标长按触发的延迟</string>
+    <string name="settings_control_mouse_long_press_delay_summary">设置屏幕长按识别的延迟时间（实体鼠标长按不受此设置影响，包括禁用实体鼠标控制时）</string>
+    <string name="settings_control_mouse_physical_mouse_mode_title">实体鼠标控制</string>
+    <string name="settings_control_mouse_physical_mouse_mode_summary">在 GUI 界面，是否禁用虚拟鼠标控制，直接使用实体鼠标控制</string>
     <string name="settings_control_gesture_control_title">手势控制</string>
     <string name="settings_control_gesture_control_summary">支持通过点击和长按等手势，在游戏中进行交互，类似基岩版</string>
     <string name="settings_control_gesture_tap_action_title">点击触发的操作类型</string>
