--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -212,7 +212,10 @@
     <string name="versions_config_renderer">渲染器</string>
     <string name="versions_config_vulkan_driver">Vulkan 驱动器</string>
     <string name="versions_config_java_runtime_summary">指定当前版本所使用的 Java 环境</string>
+    <string name="versions_config_auto_join_server_ip_title">自动加入服务器</string>
+    <string name="versions_config_auto_join_server_ip_summary">在这里填入服务器 IP，启动游戏后将自动加入目标服务器。例如 114.514.114.514:114514</string>
     <string name="versions_config_follow_global_if_blank">留白则跟随全局设置</string>
+    <string name="versions_config_disable_if_blank">留白则不使用此功能</string>
     <string name="versions_config_failed_to_save">保存版本配置时出现异常</string>
     <!--  游戏  -->
     <string name="minecraft_getting_version_list">获取完整游戏列表</string>
