Adjust physical mouse settings

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -272,6 +272,8 @@
     <string name="settings_game_java_memory_summary">控制给 Minecraft 分配多少内存</string>
     <string name="settings_game_jvm_args_title">JVM 启动参数</string>
     <string name="settings_game_jvm_args_summary">启动 Minecraft 时，额外添加的 JVM 参数，不建议在没有把握的情况下进行修改，因为这很有可能导致游戏崩溃</string>
+    <string name="settings_control_mouse_physical_mouse_mode_title">实体鼠标控制</string>
+    <string name="settings_control_mouse_physical_mouse_mode_summary">连接实体鼠标时，是否禁用虚拟鼠标指针，直接使用系统鼠标指针进行操控</string>
     <string name="settings_control_mouse_size_title">虚拟鼠标大小</string>
     <string name="settings_control_mouse_speed_title">虚拟鼠标灵敏度</string>
     <string name="settings_control_mouse_control_mode_title">虚拟鼠标控制模式</string>
@@ -283,8 +285,6 @@
     <string name="settings_control_mouse_pointer_reset_message">你确定要重置虚拟鼠标指针的图片吗？</string>
     <string name="settings_control_mouse_long_press_delay_title">虚拟鼠标长按触发的延迟</string>
     <string name="settings_control_mouse_long_press_delay_summary">设置屏幕长按识别的延迟时间（实体鼠标长按不受此设置影响，包括禁用实体鼠标控制时）</string>
-    <string name="settings_control_mouse_physical_mouse_mode_title">实体鼠标控制</string>
-    <string name="settings_control_mouse_physical_mouse_mode_summary">在 GUI 界面，是否禁用虚拟鼠标控制，直接使用实体鼠标控制</string>
     <string name="settings_control_gesture_control_title">手势控制</string>
     <string name="settings_control_gesture_control_summary">支持通过点击和长按等手势，在游戏中进行交互，类似基岩版</string>
     <string name="settings_control_gesture_tap_action_title">点击触发的操作类型</string>
