feat: Add settings for log font size and refresh interval

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -272,6 +272,10 @@
     <string name="settings_game_java_memory_summary">控制给 Minecraft 分配多少内存</string>
     <string name="settings_game_jvm_args_title">JVM 启动参数</string>
     <string name="settings_game_jvm_args_summary">启动 Minecraft 时，额外添加的 JVM 参数，不建议在没有把握的情况下进行修改，因为这很有可能导致游戏崩溃</string>
+    <string name="settings_game_log_text_size_title">日志字体大小</string>
+    <string name="settings_game_log_text_size_summary">调整日志屏幕上的文字大小</string>
+    <string name="settings_game_log_buffer_flush_interval_title">日志刷新间隔</string>
+    <string name="settings_game_log_buffer_flush_interval_summary">设置日志缓冲区多长时间刷新一次。刷新太频繁或太久不刷新都可能影响性能</string>
     <string name="settings_control_mouse_physical_mouse_mode_title">实体鼠标控制</string>
     <string name="settings_control_mouse_physical_mouse_mode_summary">连接实体鼠标时，是否禁用虚拟鼠标指针，直接使用系统鼠标指针进行操控</string>
     <string name="settings_control_mouse_size_title">虚拟鼠标大小</string>
