feat: support TouchController

--- a/ZalithLauncher/src/main/res/values-zh/strings.xml
+++ b/ZalithLauncher/src/main/res/values-zh/strings.xml
@@ -211,6 +211,7 @@
     <string name="versions_overview_crash_report_folder">崩溃报告文件夹</string>
     <string name="versions_config_version_settings">版本独立设置</string>
     <string name="versions_config_game_settings">游戏独立设置</string>
+    <string name="versions_config_support_settings">额外支持设置</string>
     <string name="versions_config_isolation_title">版本隔离</string>
     <string name="versions_config_isolation_summary">隔离当前的版本，与所有版本之间的数据互不干扰</string>
     <string name="versions_config_renderer">渲染器</string>
@@ -218,6 +219,10 @@
     <string name="versions_config_java_runtime_summary">指定当前版本所使用的 Java 环境</string>
     <string name="versions_config_auto_join_server_ip_title">自动加入服务器</string>
     <string name="versions_config_auto_join_server_ip_summary">在这里填入服务器 IP，启动游戏后将自动加入目标服务器。例如 114.514.114.514:114514</string>
+    <string name="versions_config_enable_touch_proxy_title">启用控制代理</string>
+    <string name="versions_config_enable_touch_proxy_summary">启用为支持 Touch Controller 模组准备的控制代理</string>
+    <string name="versions_config_vibrate_duration_title">震动时长</string>
+    <string name="versions_config_vibrate_duration_summary">设置 Touch Controller 模组要求设备的震动时长</string>
     <string name="versions_config_follow_global_if_blank">留白则跟随全局设置</string>
     <string name="versions_config_disable_if_blank">留白则不使用此功能</string>
     <string name="versions_config_failed_to_save">保存版本配置时出现异常</string>
