--- a/ZalithLauncher/src/main/res/values-zh-rCN/strings.xml
+++ b/ZalithLauncher/src/main/res/values-zh-rCN/strings.xml
@@ -20,6 +20,7 @@
     <string name="generic_done">完成</string>
     <string name="generic_open">开启</string>
     <string name="generic_close">关闭</string>
+    <string name="generic_clear">清除</string>
     <string name="generic_import">导入</string>
     <string name="generic_open_link">在浏览器访问</string>
     <string name="generic_cannot_empty">内容不能为空！</string>
@@ -32,6 +33,7 @@
     <string name="generic_follow_global">跟随全局</string>
     <string name="generic_custom">自定义</string>
     <string name="generic_search">搜索</string>
+    <string name="generic_loading">加载中</string>
     <!--  启动器版本  -->
     <string name="launcher_version_label_alpha">内测版本：%s，仅供演示</string>
     <string name="launcher_version_label_beta">公测版本：%s，仅供演示</string>
@@ -62,6 +64,11 @@
     <!--  错误  -->
     <string name="error_import_image">导入图片时出现问题</string>
     <string name="error_create_dir">无法创建文件夹：%s</string>
+    <string name="error_timeout">访问超时</string>
+    <string name="error_network_unreachable">网络不可用</string>
+    <string name="error_connection_failed">无法连接到服务器</string>
+    <string name="error_parse_failed">数据解析失败</string>
+    <string name="error_unknown">未知错误：%s</string>
     <!--  启动页面  -->
     <string name="splash_screen_unpack_desc">启动器需要安装这些内容，才能够确保 Minecraft 能够正常启动。这些内容已经包含在应用中，需要解压之后才能正常使用，点击下方按钮，开始解压并更新这些内容。</string>
     <string name="splash_screen_installing">启动器正在解压这些内容，解压完成后将自动进入主界面，请耐心等待。</string>
@@ -91,6 +98,20 @@
     <string name="download_game_type_old">远古版</string>
     <string name="download_game_type_old_alpha">Alpha 版</string>
     <string name="download_game_type_old_beta">Beta 版</string>
+    <string name="download_game_version_name">版本名称</string>
+    <string name="download_game_addon_list_load_error">列表加载出错：%s</string>
+    <string name="download_game_addon_available">可以选择</string>
+    <string name="download_game_addon_unavailable">不可用</string>
+    <string name="download_game_addon_incompatible_with">与 %s 不兼容</string>
+    <string name="download_game_addon_compatible_with">兼容 %s</string>
+    <string name="download_game_addon_release">正式版</string>
+    <string name="download_game_addon_preview">预览版</string>
+    <string name="download_game_addon_stable">稳定版</string>
+    <string name="download_game_addon_debug">测试版</string>
+    <string name="download_game_addon_date">发布时间：%s</string>
+    <string name="download_game_addon_recommended">%s 官方推荐</string>
+    <string name="download_game_addon_not_installable">不支持自动安装</string>
+    <string name="download_install">安装</string>
     <!--  启动游戏  -->
     <string name="game_launch_no_version">未选择游戏版本！</string>
     <string name="game_launch_no_account">未登陆游戏账号！</string>
